Feat: CategotyResquest and CategoryResponse, implementing exception pattern